# HAPI

./: .gitignore  Claude README.md  HAPI.code-workspace  README.MD  README.md  funding.json  hapi-iop-funding.json  library.json
.RnD/: ### **HAPI: High-Performance Hardware AP.md  XC2.cpp  disabling injection.md  hapi paper.md  notes.md
.RnD/data/: platformio.ini
.RnD/paperCheck/: check.md  functions deactivated.txt  with functions active.txt
RnD/neurs/: platformio.ini
RnD/type list/: platformio.ini
benchmark/: CMakeLists.txt  bench_chart.py  bench_fold.cpp  bench_hapi.cpp  benchmark.cpp.erb  gerar_fold.py  gerar_grafico.py  gerar_grafico_find.py  main.cpp  main_find.cpp  run_bench.sh  run_fold.sh  transform.cpp.erb  transform_baseline.cpp.erb  transform_hapi.cpp.erb  transform_tuple.cpp.erb
benchmark/old/: chain.cpp.erb  query.cpp.erb
docs/: COMPONENTS.md  DESIGN.md  INDUSTRY.md  REFERENCE.0.3.33.md  REFERENCE.md  reference.md
docs/disassembly/: functions_disabled.txt  functions_enabled.txt
examples/crtp/: platformio.ini
examples/data/: library.json  platformio.ini
examples/examples/: cpld_register_bridge.cpp
examples/flat/: platformio.ini
examples/rules/: platformio.ini
examples/std/: platformio.ini
examples/virt/: platformio.ini
include/hapi/: api.h  base.h  chain.h  comp.h  hapi.h  meta.h  rules.h  run.h
rnd/: platformio.ini
rnd/src/: main.cpp  main.cpp.old  main.cpp.zZz
src/: hapi.h  rules.h
src/hapi/: api.h  base.h  canPrint.h  comp.h  data.h  parts.h  staticList.h
tests/: compile_tests.cpp  run_tests.cpp
(+21 files in other folders)
